fix: Update RestExceptionHandler to use toList() for collecting field errors